# SystemDetect_OLD

./: .cmake-format.yaml  CMakeLists.txt  README.md
.github/workflows/: Linux-Clang.yml  Linux-GCC.yml  Windows-MSVC.yml  Windows-MinGW.yml  clang-format.yml  macOS.yml
cmake/: SystemDetect.hpp.in  SystemDetectConfig.cmake.in  SystemDetectMacro.hpp.in  detect-arch.c  detect-arch.cmake  detect-arch.cpp  detect-compiler.cmake  detect-endianness.cmake
examples/: CMakeLists.txt  SystemDetect.cpp  SystemDetectMacro.cpp
include/: DisableWarning.hpp  SystemDetect.hpp  SystemDetectMacro.hpp
tests/: CMakeLists.txt  SystemDetect.cpp  SystemDetectMacro.cpp  Test.cpp
