add_executable(TestSystemDetect SystemDetect.cpp)
target_link_libraries(TestSystemDetect PRIVATE SystemDetect)

add_executable(TestSystemDetectMacro SystemDetectMacro.cpp)
target_link_libraries(TestSystemDetectMacro PRIVATE SystemDetect)

install(TARGETS TestSystemDetect TestSystemDetectMacro RUNTIME DESTINATION bin)

add_test(NAME TestSystemDetect COMMAND TestSystemDetect)
add_test(NAME TestSystemDetectMacro COMMAND TestSystemDetectMacro)
